--- a/web/index.html
+++ b/web/index.html
@@ -153,6 +153,6 @@
             return self;
         }();
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxBWgQaHW2wWAoWXUgKtwIn8BDJDtqOAA&libraries=places&callback=AutoComplete.init" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxBWgQaHW2wWAoWXUgKtwIn8BDJDtqOAA&apm;libraries=places&apm;callback=AutoComplete.init" async defer></script>
 </body>
 </html>
