--- a/web/index.html
+++ b/web/index.html
@@ -94,8 +94,15 @@
     <script>
         var AutoComplete = function () {
             var self = {};
-            // This example displays an address form, using the autocomplete feature
-            // of the Google Places API to help users fill in the information.
+            /**
+             * This example displays an address form, using the autocomplete feature
+             * of the Google Places API to help users fill in the information.
+             *
+             * @var placeSearch  Used for Google maps places autocomplete
+             * @var autocomplete Sets the Google maps places autocomplete
+             * @var compnentForm Configuraiton for the form of the autocomplete
+             */
+
             var placeSearch, autocomplete;
             var componentForm = {
                 locality: 'long_name',
@@ -130,8 +137,9 @@
                 // Get each component of the address from the place details
                 // and fill the corresponding field on the form.
                 var prOverride = false;
-                for (var j=0; j < place.address_components.length; j++) {
-                    if (place.address_components[j].types[0] == 'country' && place.address_components[j]['long_name'] == 'Puerto Rico') {
+        		var placeAddressComponentsLength = place.address_components.length;
+                for (var i=0; i < placeAddressComponentsLength; i++) {
+                    if (place.address_components[i].types[0] == 'country' && place.address_components[i]['long_name'] == 'Puerto Rico') {
                         prOverride = true;
                     }
                 }
