--- a/web/index.html
+++ b/web/index.html
@@ -1,8 +1,3 @@
-<?php
-require_once 'vendor/autoload.php';
-$dotenv = new Dotenv\Dotenv(__DIR__);
-$dotenv->load();
-?>
 <!doctype html>
 <html lang="en">
 <head>
@@ -95,7 +90,7 @@ $dotenv->load();
             <input type="text" id="country" name="contact[country]" value="" style="display: none;" />
         </div>
     </div>
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/jquery/dist/jquery.js"></script>
     <script>
         var AutoComplete = function () {
             var self = {};
@@ -164,6 +159,6 @@ $dotenv->load();
             return self;
         }();
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=<?= getenv('GOOGLE_MAP_API_KEY'); ?>&amp;libraries=places&amp;callback=AutoComplete.init" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&amp;libraries=places&amp;callback=AutoComplete.init" async defer></script>
 </body>
 </html>
